# LangChain-ChatGLM-Webui

./: Dockerfile  Dockerfile.Base  README.md  app.py  chatglm_llm.py  chatllm.py  chinese_text_splitter.py  config.py  jina_serving.py  pyproject.toml  requirement.txt  requirements.txt  test.py
config/: model_config.py
docs/: deploy.md  faq.md  qa.md  update_history.md
model_cache/: OfflineDeploy.md
modelscope/: app.py  chatglm_llm.py  modelscope_hub.py  requirements.txt
paddlepaddle/: README.md  app.py  chatllm.py  cli.py  demo.py  paddle_embedding.py  requirements.txt
test/: app.py  llm.py
